--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="#">Tweet</a>
+		<a class="navbar-brand" href="#">Tweet API</a>
 	</div>
 
 	<!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,7 +36,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-default">
+				<div class="panel panel-info">
 					<div class="panel-heading">Login</div>
 					<div class="panel-body">
 						<form action="" method="post" role="form" id="login-form">
@@ -69,7 +69,7 @@
 
 
 <script type="text/javascript">
-	const url = "http://tweetapi.server/"
+	const url = "http://tweetapi.server/";
 	$(document).ready(function(){
 		$("#login-form").on("submit",function(e){
 			e.preventDefault();
@@ -90,7 +90,7 @@
 				dataType: 'json',
 				method: 'post',
 				success: function(f){
-					console.log(f);
+					//console.log(f);
 					alert(f.status.msg);
 					if(f.status.type == "success"){
 						sessionStorage.setItem("user_id", f.user_data.id);
@@ -98,7 +98,7 @@
 					}
 				},
 				error: function(e){
-					console.log(e);
+					//console.log(e);
 				}
 			});
 		});
