--- a/index.html
+++ b/index.html
@@ -1,108 +1,71 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Tweet API</title>
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="login_style2.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="title">Login Form</div>
+      <form action="#">
+        <div class="field">
+          <input type="text" required="" name="username" id="username" class="form-control" placeholder="Username">
+          <label>Username</label>
+        </div>
+        <div class="field">
+          <input type="password" required="" name="password" id="password" class="form-control" placeholder="Username">
+          <label>Password</label>
+        </div>
+        
+        <div class="field">          
+          <input type="submit" name="ok" class="btn btn-sm btn-success" value="Login">
+        </div>
+        <div class="signup-link">Not a member? <a href="register.html">Signup now</a></div>
+      </form>
+    </div>
 
 
-<nav class="navbar navbar-default" role="navigation">
-	<!-- Brand and toggle get grouped for better mobile display -->
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<a class="navbar-brand" href="#">Tweet API</a>
-	</div>
-
-	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div class="collapse navbar-collapse navbar-ex1-collapse">
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">Home</a></li>			
-			<li><a href="#">Login</a></li>
-			<li><a href="#">Register</a></li>
-		</ul>
-	</div><!-- /.navbar-collapse -->
-</nav>
-
-
-
-
-<section>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-info">
-					<div class="panel-heading">Login</div>
-					<div class="panel-body">
-						<form action="" method="post" role="form" id="login-form">
-							<div class="form-group">
-								<label>Username</label>
-								<input type="text" name="username" id="username" class="form-control" placeholder="Username">
-							</div>
-
-							<div class="form-group">
-								<label>Password</label>
-								<input type="password" name="password" id="password" class="form-control" placeholder="Username">
-							</div>
-
-							<div class="form-group">
-								
-								<input type="submit" name="ok" class="btn btn-sm btn-success" value="Login">
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-
-
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 
 <script type="text/javascript">
-	const url = "http://tweetapi.server/";
-	$(document).ready(function(){
-		$("#login-form").on("submit",function(e){
-			e.preventDefault();
+  const url = "http://tweetapi.server/";
+  $(document).ready(function(){
+    $("#login-form").on("submit",function(e){
+      e.preventDefault();
 
-			let username = $("#username").val();
-			let password = $("#password").val();
+      let username = $("#username").val();
+      let password = $("#password").val();
 
-			$.ajax({
-				url: url + "login",
-				xhrFields: {
-  					//withCredentials: true,
-  					credentials: 'same-origin',
-	   			},
-				data: {
-					'username': username,
-					'password': password
-				},
-				dataType: 'json',
-				method: 'post',
-				success: function(f){
-					//console.log(f);
-					alert(f.status.msg);
-					if(f.status.type == "success"){
-						sessionStorage.setItem("user_id", f.user_data.id);
-						window.location = "home.html";
-					}
-				},
-				error: function(e){
-					//console.log(e);
-				}
-			});
-		});
-	});
+      $.ajax({
+        url: url + "login",
+        xhrFields: {
+            //withCredentials: true,
+            credentials: 'same-origin',
+          },
+        data: {
+          'username': username,
+          'password': password
+        },
+        dataType: 'json',
+        method: 'post',
+        success: function(f){
+          //console.log(f);
+          alert(f.status.msg);
+          if(f.status.type == "success"){
+            sessionStorage.setItem("user_id", f.user_data.id);
+            window.location = "home.html";
+          }
+        },
+        error: function(e){
+          //console.log(e);
+        }
+      });
+    });
+  });
 </script>
-</body>
+
+  </body>
 </html>
